@@ -1,6 +1,7 @@
-/*package ru.yandex.practicum.filmorate;
+package ru.yandex.practicum.filmorate;
 
 import org.junit.jupiter.api.Test;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabase;
 import org.springframework.boot.test.autoconfigure.jdbc.JdbcTest;
 import org.springframework.context.annotation.Import;
@@ -8,6 +9,7 @@ import ru.yandex.practicum.filmorate.model.User;
 import ru.yandex.practicum.filmorate.storage.user.UserDbStorage;
 
 import java.time.LocalDate;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -16,12 +18,8 @@ import static org.assertj.core.api.Assertions.assertThat;
 @Import(UserDbStorage.class)
 public class UserDbStorageTest {
 
-
+    @Autowired
     private UserDbStorage userDbStorage;
-
-    public UserDbStorageTest(UserDbStorage userDbStorage) {
-        this.userDbStorage = userDbStorage;
-    }
 
     @Test
     public void testAddUser() {
@@ -32,18 +30,17 @@ public class UserDbStorageTest {
         assertThat(addedUser.getEmail()).isEqualTo(user.getEmail());
     }
 
-@Test
-public void testUpdateUser() {
-    User user = new User("user@example.com", "validLogin", "Valid Name", LocalDate.of(2000, 1, 1));
-    User addedUser = userDbStorage.addUser(user); // Добавляем пользователя
+    @Test
+    public void testUpdateUser() {
+        User user = new User("user@example.com", "validLogin", "Valid Name", LocalDate.of(2000, 1, 1));
+        User addedUser = userDbStorage.addUser(user);
 
-    // Обновляем данные пользователя
-    addedUser.setName("Updated Name");
-    User updatedUser = userDbStorage.updateUser(addedUser); // Обновляем пользователя
+        addedUser.setName("Updated Name");
+        User updatedUser = userDbStorage.updateUser(addedUser);
 
-    assertThat(updatedUser).isNotNull();
-    assertThat(updatedUser.getName()).isEqualTo("Updated Name");
-}
+        assertThat(updatedUser).isNotNull();
+        assertThat(updatedUser.getName()).isEqualTo("Updated Name");
+    }
 
     @Test
     public void testFindUserById() {
@@ -65,17 +62,16 @@ public void testUpdateUser() {
         assertThat(deletedUser).isNull();
     }
 
-   @Test
-public void testAddFriend() {
-    User user1 = userDbStorage.addUser(new User("user1@example.com", "login1", "User 1", LocalDate.of(2000, 1, 1)));
-    User user2 = userDbStorage.addUser(new User("user2@example.com", "login2", "User 2", LocalDate.of(2000, 1, 1)));
+    @Test
+    public void testAddFriend() {
+        User user1 = userDbStorage.addUser(new User("user1@example.com", "login1", "User 1", LocalDate.of(2000, 1, 1)));
+        User user2 = userDbStorage.addUser(new User("user2@example.com", "login2", "User 2", LocalDate.of(2000, 1, 1)));
 
-    userService.addFriend(user1.getId(), user2.getId());
+        userDbStorage.addFriend(user1.getId(), user2.getId());
 
-    List<User> friends = userService.getFriends(user1.getId());
-    assertThat(friends).hasSize(1);
-    assertThat(friends.get(0).getId()).isEqualTo(user2.getId());
+        List<User> friends = userDbStorage.getFriends(user1.getId());
+        assertThat(friends).hasSize(1);
+        assertThat(friends.getFirst().getId()).isEqualTo(user2.getId());
+    }
 }
-}
 
- */
